--- a/Newtonsoft.Json.Serialization.ContractResolverExtentions/Newtonsoft.Json.Serialization.ContractResolverExtentions.csproj
+++ b/Newtonsoft.Json.Serialization.ContractResolverExtentions/Newtonsoft.Json.Serialization.ContractResolverExtentions.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SnakeCaseIntegerSeperatedPropertyNamesContractResolver.cs" />
     <Compile Include="SnakeCasePropertyNamesContractResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
