--- a/Tests/Newtonsoft.Json.Serialization.ContractResolverExtentions.Tests.csproj
+++ b/Tests/Newtonsoft.Json.Serialization.ContractResolverExtentions.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>14d45539-e136-4e72-a715-fb487381b32d</ProjectGuid>
+    <ProjectGuid>{C8A7E5B9-EE41-4CE7-86EA-7802148F074D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tests</RootNamespace>
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.7\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -50,8 +54,22 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="JsonIgnoreAttributeOnClassTestClass.cs" />
+    <Compile Include="Person.cs" />
+    <Compile Include="PrivateMembersClass.cs" />
+    <Compile Include="Product.cs" />
+    <Compile Include="SnakeCasePropertyNamesContractResolverTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTest1.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Newtonsoft.Json.Serialization.ContractResolverExtentions\Newtonsoft.Json.Serialization.ContractResolverExtentions.csproj">
+      <Project>{c855e6ae-d38e-4a7c-b24b-07da1410b300}</Project>
+      <Name>Newtonsoft.Json.Serialization.ContractResolverExtentions</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
